# user_service

./: .env  README.md  pyproject.toml
user_service/: config.py  db.py  main.py  model.py  schema.py
